# spectrometer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  serve.py
api/: auth.py  billing.py  config.py  email.py  main.py  usage.py
migrations/: env.py
scripts/: bias_elicitation_test.py  bias_stability_test.py
spectrometer/: __init__.py  engine.py  models.py
ui/: index.html
