[project]
name = "spectrometer"
version = "0.1.0"
description = "Bias Spectrometer — extract training bias from AI models"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "openai>=1.40",
    "requests>=2.31",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
